--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: Covid19 Research and Visualization
-author: Xiaoyu Su, Jiongxin Ye, Hanxiao Zhang,Lei Guo
+title: "Covid19 Research and Visualization"
+author: "Xiaoyu Su, Jiongxin Ye, Hanxiao Zhang,Lei Guo"
 
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
