--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "Covid19 Research and Visualization"
-author: "Xiaoyu Su, Jiongxin Ye, Hanxiao Zhang,Lei Guo"
+title: "Covid 19 Research and Visualization"
+author: "Xiaoyu Su, Jiongxin Ye, Hanxiao Zhang, Lei Guo"
 
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -8,4 +8,4 @@ site: bookdown::bookdown_site
 
 # Introduction
 
-Focus on Covid19 Data. Research the relationship between Covid18, election polling and health care.
+Focus on Covid_19 Data. Research the relationship between Covid_19, election polling and health care.
